init swagger 97%
